<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_change_view"
        android:icon="@drawable/ic_menu_change_view"
        android:title="@string/change_view"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_search_photo"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search_photo"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_show_subtitle"
        android:title="@string/show_subtitle"
        />
    <item android:id="@+id/menu_item_sort_by_date"
          android:title="@string/sort_by_date"/>
    <item android:id="@+id/menu_item_sort_by_name"
          android:title="@string/sort_by_title"/>
</menu>