<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_title_label"/>

    <EditText
        android:id="@+id/photo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/photo_title_hint"
        android:onClick=""/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerCrop"/>

        <ImageButton
            android:id="@+id/photo_camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@id/photo_image"
            android:layout_alignRight="@id/photo_image"
            android:src="@drawable/ic_take_photo"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/photo_comment"
        android:hint="@string/photo_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
</LinearLayout>